--- a/index.less
+++ b/index.less
@@ -1,25 +1,33 @@
-.editor, .editor .gutter {
+:host, atom-text-editor,
+:host .gutter, atom-text-editor .gutter {
   background-color: #FFFFFF;
   color: #000000;
 }
 
-.editor.is-focused .cursor {
+:host.is-focused .cursor,
+atom-text-editor.is-focused .cursor {
   border-color: #000000;
 }
 
-.editor.is-focused .selection .region {
+:host.is-focused .selection .region {
+atom-text-editor.is-focused .selection .region {
   background-color: rgba(77, 151, 255, 0.33);
 }
 
-.editor.is-focused .line-number.cursor-line-no-selection, .editor.is-focused .line.cursor-line {
+:host.is-focused .line-number.cursor-line-no-selection,
+:host.is-focused .line.cursor-line,
+atom-text-editor.is-focused .line-number.cursor-line-no-selection,
+atom-text-editor.is-focused .line.cursor-line {
   background-color: rgba(0, 0, 0, 0.07);
 }
 
-.editor .indent-guide {
+:host .indent-guide,
+atom-text-editor .indent-guide {
   box-shadow: inset 1px 0 rgba(0,0,0,0.5);
 }
 
-.editor .invisible-character {
+:host .invisible-character,
+atom-text-editor .invisible-character {
   opacity: 0.2;
 }
 
