Fix a single lingering syntax-- class thing

--- a/index.less
+++ b/index.less
@@ -156,7 +156,7 @@ atom-text-editor {
 //   background-color: rgba(0, 0, 0, 0.06);
 // }
 
-.syntax--meta.syntax--tag.syntax--preprocessor.xml {
+.syntax--meta.syntax--tag.syntax--preprocessor.syntax--xml {
   color: #68685B;
 }
 
